# crypto-research-agent

./: AGENTS.md  README.md
docs/arch/: phase1_prelude_architecture.md  project_roadmap_v1.md
prelude/: .crawl_config.json  .env.example  .gitignore  AGENTS.md  Makefile  README.md  README_zh.md  craw_list.json  main.py  pyproject.toml
prelude/agent/: agent_loop.py  system_prompt.py  tools.py
prelude/app/agent/: agent_loop.py
prelude/app/bridge/: pi_bridge.py
prelude/bridge/: pi_bridge.py
prelude/chunkers/: semantic_chunker.py
prelude/config/: README.md  craw_list.json  craw_list.yaml  rag_pipeline.yaml
prelude/crawlers/: gitbook_crawler.py
prelude/docs/: README.md
prelude/docs/exec-plans/: README.md  prelude-2026-04-continuation.md  tech-debt-tracker.md
prelude/docs/research/: bge-m3-attention-memory-estimation.md  rag-pipeline-incident-log.md
prelude/docs/todo/: 2026-04-06-rag-grounding-findings.md
prelude/parsers/: html_to_markdown.py  markdown_parser.py
prelude/rag/: pipeline_config.py
prelude/rag/chunkers/: semantic_chunker.py
prelude/rag/crawlers/: gitbook_crawler.py
prelude/rag/embedders/: embedding_pipeline.py
prelude/rag/parsers/: html_to_markdown.py
prelude/scripts/: analyze_chunks.py  build_index.py  investigate_chunk_outliers.py
prelude/tests/: test_agent_loop.py  test_bridge.py  test_build_index.py  test_embedding_pipeline.py  test_html_to_markdown.py  test_markdown_parser.py  test_pipeline_config.py  test_semantic_chunker.py  test_tool_handlers.py
prelude/tui/: package.json  pnpm-lock.yaml
prelude/tui/src/: index.ts
(+7 files in other folders)
